--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -3,6 +3,8 @@
 
 //ToastController width
 $toast-max-width: 1000px;
+$toast-ios-title-font-size: 25px;
+$toast-ios-title-padding-top: 2rem;
 
 // Font path is used to include ionicons,
 // roboto, and noto sans fonts
